{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 52,
  "lineage": "e4857900-a4ae-7e6a-44f1-e18366ab745f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "aircanada_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-082e211777f8a1f35",
            "arn": "arn:aws:ec2:us-east-1:477413570762:elastic-ip/eipalloc-082e211777f8a1f35",
            "domain": "vpc",
            "id": "eipalloc-082e211777f8a1f35",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-4-86-20.compute-1.amazonaws.com",
            "public_ip": "52.4.86.20",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "aircanada_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0532be01f26a3de55",
            "arn": "arn:aws:ec2:us-east-1:477413570762:instance/i-09ff736b8fb993e18",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09ff736b8fb993e18",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0437150bc417a4adc",
            "private_dns": "ip-10-0-0-209.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00cac3857c80f86bf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b602db0624015fc",
            "tags": {
              "Env": "Prod",
              "Name": "AirCanada-EC2-1"
            },
            "tags_all": {
              "Env": "Prod",
              "Name": "AirCanada-EC2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03a495ef73b8f282a"
            ]
          },
          "dependencies": [
            "aws_subnet.AC_Public",
            "aws_vpc.aircanada_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0532be01f26a3de55",
            "arn": "arn:aws:ec2:us-east-1:477413570762:instance/i-04c665e3e1175dac6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04c665e3e1175dac6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0443863147817b94e",
            "private_dns": "ip-10-0-0-161.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b12946d0ec512c43",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b602db0624015fc",
            "tags": {
              "Env": "Prod",
              "Name": "AirCanada-EC2-2"
            },
            "tags_all": {
              "Env": "Prod",
              "Name": "AirCanada-EC2-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03a495ef73b8f282a"
            ]
          },
          "dependencies": [
            "aws_subnet.AC_Public",
            "aws_vpc.aircanada_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0532be01f26a3de55",
            "arn": "arn:aws:ec2:us-east-1:477413570762:instance/i-02b13cec461f38232",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02b13cec461f38232",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a74c5e59827fea1c",
            "private_dns": "ip-10-0-0-168.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09ec2f0e9b9651c4a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b602db0624015fc",
            "tags": {
              "Env": "Prod",
              "Name": "AirCanada-EC2-3"
            },
            "tags_all": {
              "Env": "Prod",
              "Name": "AirCanada-EC2-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03a495ef73b8f282a"
            ]
          },
          "dependencies": [
            "aws_subnet.AC_Public",
            "aws_vpc.aircanada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aircanada_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477413570762:internet-gateway/igw-0028eafecc6e51ecf",
            "id": "igw-0028eafecc6e51ecf",
            "owner_id": "477413570762",
            "tags": {
              "Env": "Prod",
              "Name": "AirCanadaVPC",
              "PM": "John Doe",
              "Project": "AirCanada-2026"
            },
            "tags_all": {
              "Env": "Prod",
              "Name": "AirCanadaVPC",
              "PM": "John Doe",
              "Project": "AirCanada-2026"
            },
            "vpc_id": "vpc-09607e1d0050597d4"
          },
          "dependencies": [
            "aws_vpc.aircanada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "aircanada_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-082e211777f8a1f35",
            "association_id": "eipassoc-02b505bf2e820fa90",
            "connectivity_type": "public",
            "id": "nat-0290f318b573ff270",
            "network_interface_id": "eni-0feb866cf88b11c31",
            "private_ip": "10.0.0.31",
            "public_ip": "52.4.86.20",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01b602db0624015fc",
            "tags": {
              "Env": "Prod",
              "Name": "AC_NAT_Gateway"
            },
            "tags_all": {
              "Env": "Prod",
              "Name": "AC_NAT_Gateway"
            }
          },
          "dependencies": [
            "aws_eip.aircanada_eip",
            "aws_internet_gateway.aircanada_igw",
            "aws_subnet.AC_Public",
            "aws_vpc.aircanada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "AC_Private_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477413570762:route-table/rtb-0385079b75a32fab7",
            "id": "rtb-0385079b75a32fab7",
            "owner_id": "477413570762",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0290f318b573ff270",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "Prod",
              "Name": "PrivateSN_RT"
            },
            "tags_all": {
              "Env": "Prod",
              "Name": "PrivateSN_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-09607e1d0050597d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.aircanada_eip",
            "aws_internet_gateway.aircanada_igw",
            "aws_nat_gateway.aircanada_ngw",
            "aws_subnet.AC_Public",
            "aws_vpc.aircanada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "AC_Public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477413570762:route-table/rtb-067f8ef7a4c232d76",
            "id": "rtb-067f8ef7a4c232d76",
            "owner_id": "477413570762",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0028eafecc6e51ecf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "Prod",
              "Name": "PublicSN_RT"
            },
            "tags_all": {
              "Env": "Prod",
              "Name": "PublicSN_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-09607e1d0050597d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.aircanada_igw",
            "aws_vpc.aircanada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AC_Private_RTA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01559adacc424d9c7",
            "route_table_id": "rtb-0385079b75a32fab7",
            "subnet_id": "subnet-049dcc49df9b92cc4"
          },
          "dependencies": [
            "aws_eip.aircanada_eip",
            "aws_internet_gateway.aircanada_igw",
            "aws_nat_gateway.aircanada_ngw",
            "aws_route_table.AC_Private_RT",
            "aws_subnet.AC_Private",
            "aws_subnet.AC_Public",
            "aws_vpc.aircanada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AC_Public_RTA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02753f1c4d6b71469",
            "route_table_id": "rtb-067f8ef7a4c232d76",
            "subnet_id": "subnet-01b602db0624015fc"
          },
          "dependencies": [
            "aws_internet_gateway.aircanada_igw",
            "aws_route_table.AC_Public_RT",
            "aws_subnet.AC_Public",
            "aws_vpc.aircanada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "AC_Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477413570762:subnet/subnet-049dcc49df9b92cc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049dcc49df9b92cc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "477413570762",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Prod",
              "Name": "AC_Private_Subnet"
            },
            "tags_all": {
              "Env": "Prod",
              "Name": "AC_Private_Subnet"
            },
            "vpc_id": "vpc-09607e1d0050597d4"
          },
          "dependencies": [
            "aws_vpc.aircanada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "AC_Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477413570762:subnet/subnet-01b602db0624015fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b602db0624015fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "477413570762",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Prod",
              "Name": "AC_Public_Subnet"
            },
            "tags_all": {
              "Env": "Prod",
              "Name": "AC_Public_Subnet"
            },
            "vpc_id": "vpc-09607e1d0050597d4"
          },
          "dependencies": [
            "aws_vpc.aircanada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aircanada_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477413570762:vpc/vpc-09607e1d0050597d4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fa117d222b60c2b3",
            "default_route_table_id": "rtb-06f65eb49d5560e09",
            "default_security_group_id": "sg-03a495ef73b8f282a",
            "dhcp_options_id": "dopt-00e702c9eb9291e46",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09607e1d0050597d4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06f65eb49d5560e09",
            "owner_id": "477413570762",
            "tags": {
              "Env": "Prod",
              "Name": "AirCanadaVPC",
              "PM": "John Doe",
              "Project": "AirCanada-2026"
            },
            "tags_all": {
              "Env": "Prod",
              "Name": "AirCanadaVPC",
              "PM": "John Doe",
              "Project": "AirCanada-2026"
            }
          }
        }
      ]
    }
  ]
}